[package]
name = "egui-miniquad"
version = "0.14.0"
authors = [
  "Logachev Fedor <not.fl3@gmail.com>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
]
description = "Bindings between egui and miniquad"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/not-fl3/egui-miniquad"
repository = "https://github.com/not-fl3/egui-miniquad"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
bytemuck = "1.9"
egui = { version = "0.25", features = ["bytemuck"] }
miniquad = { version = "=0.4.0-alpha.10" }
quad-url = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["custom"] }
quad-rand = "0.2.1"

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.8.1"

[dev-dependencies]
egui_demo_lib = { version = "0.25", default-features = false }
glam = "0.22.0"

[profile.release]
opt-level = 2 # fast and small wasm

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-subscriber = "0.3"
